New .gitignore file to ignore public/packs

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 whatsHappening-backend/log/*
 whatsHappening-backend/tmp/*
 whatsHappening-backend/node_modules
+whatsHappening-backend/public/packs
