--- a/whatsHappening-backend/package.json
+++ b/whatsHappening-backend/package.json
@@ -4,8 +4,10 @@
   "dependencies": {
     "@rails/webpacker": "3.5",
     "babel-preset-react": "^6.24.1",
+    "bootstrap": "^4.1.1",
     "prop-types": "^15.6.1",
     "react": "^16.4.0",
+    "react-bootstrap": "^0.32.1",
     "react-dom": "^16.4.0",
     "react-router-dom": "^4.3.1",
     "reactstrap": "^6.1.0"
