--- a/whatsHappening-backend/public/packs/manifest.json
+++ b/whatsHappening-backend/public/packs/manifest.json
@@ -1,8 +1,8 @@
 {
-  "Routes.js": "/packs/Routes-04191eca1afec67d4288.js",
-  "Routes.js.map": "/packs/Routes-04191eca1afec67d4288.js.map",
-  "application.js": "/packs/application-2c04bb339440f0bac3e7.js",
-  "application.js.map": "/packs/application-2c04bb339440f0bac3e7.js.map",
-  "hello_react.js": "/packs/hello_react-2dbc8c7b0f8546ff8201.js",
-  "hello_react.js.map": "/packs/hello_react-2dbc8c7b0f8546ff8201.js.map"
+  "application.css": "/packs/application-bdd0dcb113b3f5283fa11945b5218b08.css",
+  "application.css.map": "/packs/application-bdd0dcb113b3f5283fa11945b5218b08.css.map",
+  "application.js": "/packs/application-06c93592eb7962fd31ff.js",
+  "application.js.map": "/packs/application-06c93592eb7962fd31ff.js.map",
+  "hello_react.js": "/packs/hello_react-52cdbb2850544ba0836f.js",
+  "hello_react.js.map": "/packs/hello_react-52cdbb2850544ba0836f.js.map"
 }
