--- a/whatsHappening-backend/public/packs/manifest.json
+++ b/whatsHappening-backend/public/packs/manifest.json
@@ -1,8 +1,4 @@
 {
-  "Routes.js": "/packs/Routes-763ac47f099979ea5d0f.js",
-  "Routes.js.map": "/packs/Routes-763ac47f099979ea5d0f.js.map",
-  "application.js": "/packs/application-6896f96586c96f18126c.js",
-  "application.js.map": "/packs/application-6896f96586c96f18126c.js.map",
-  "hello_react.js": "/packs/hello_react-c0e9624e8ec867c3b304.js",
-  "hello_react.js.map": "/packs/hello_react-c0e9624e8ec867c3b304.js.map"
+  "application.js": "/packs/application-e1d705e851ccbe5e6453.js",
+  "application.js.map": "/packs/application-e1d705e851ccbe5e6453.js.map"
 }
