--- a/whatsHappening-backend/package.json
+++ b/whatsHappening-backend/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.18.0",
     "babel-preset-react": "^6.24.1",
     "bootstrap": "^4.1.1",
+    "mapbox-gl": "^0.45.0",
     "prop-types": "^15.6.1",
     "react": "^16.4.0",
     "react-bootstrap": "^0.32.1",
