Adding geocoder gem to application - incorporated into models and extra happening in seed data for testing

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 whatsHappening-backend/log/*
 whatsHappening-backend/tmp/*
-whatsHappening-backend/node_modules
-whatsHappening-backend/public/packs
+whatsHappening-backend/node_modules/
+whatsHappening-backend/public/packs/
+whatsHappening-backend/yarn.lock
